--- a/EventFlow.Api/appsettings.json
+++ b/EventFlow.Api/appsettings.json
@@ -1,17 +1,18 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=AXEL\\SQLEXPRESS;Database=EventFlowDb;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=EventFlow;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
   },
-  "Jwt": {
-    "Key": "MunicipalidadNicoya_SuperSecretKey_2025_MinLength32Characters!",
-    "Issuer": "MunicipalidadNicoya",
-    "Audience": "MunicipalidadNicoyaAPI",
-    "ExpirationHours": 8
+  "RabbitMQ": {
+    "HostName": "localhost",
+    "UserName": "admin",
+    "Password": "admin123",
+    "QueueName": "pagos.dashboard"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "EventFlow.Services.RabbitMQConsumerService": "Information"
     }
   },
   "AllowedHosts": "*"
