Test con el Grupo3

--- a/EventFlow.Api/appsettings.json
+++ b/EventFlow.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLEXPRESS;Database=EventFlow;Trusted_Connection=True;MultipleActiveResultSets=True;TrustServerCertificate=True"
+    "DefaultConnection": "server=tramway.proxy.rlwy.net;port=45103;database=railway;user=root;password=KmNFjbLxjvYlpzFvbujiSvNLbqnizNYq;"
   },
   "RabbitMQ": {
     "HostName": "localhost",
