--- a/EventFlow.Api/appsettings.json
+++ b/EventFlow.Api/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "server=tramway.proxy.rlwy.net;port=45103;database=railway;user=root;password=KmNFjbLxjvYlpzFvbujiSvNLbqnizNYq;"
   },
   "RabbitMQ": {
-    "HostName": "localhost",
+    "HostName": "26.155.73.119",
     "UserName": "admin",
     "Password": "admin123",
     "QueueName": "pagos.dashboard"
